samples/_failures_safe/1761321957_2902e2_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_1843e7a4.c: In function ‘get_next_token’:
./samples/SAFE/__tmp_1843e7a4.c:164:5: error: expected declaration or statement at end of input
  164 |     (*column)++;
      |     ^
